Стерты комменты, убрано в строчки

--- a/app/src/main/res/layout/alarm_list_item.xml
+++ b/app/src/main/res/layout/alarm_list_item.xml
@@ -14,20 +14,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:text="00 : 00"
+            android:text="@string/tim00"
             android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <!--<TextView-->
-            <!--android:id="@+id/alarm_item_name"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignBottom="@+id/alarm_item_time"-->
-            <!--android:layout_marginLeft="8dp"-->
-            <!--android:layout_marginRight="8dp"-->
-            <!--android:layout_toLeftOf="@+id/alarm_item_toggle"-->
-            <!--android:layout_toRightOf="@+id/alarm_item_time"-->
-            <!--android:text="Medium Text"-->
-            <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->
 
         <TextView
             android:id="@+id/alarm_item_sunday"
@@ -35,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/alarm_item_time"
-            android:text="П"
+            android:text="@string/pnd"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
@@ -44,8 +32,8 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/alarm_item_sunday"
             android:layout_below="@+id/alarm_item_time"
-            android:layout_marginLeft="4dp"
-            android:text="В"
+            android:layout_marginLeft="@dimen/listItem"
+            android:text="@string/vt"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
@@ -54,8 +42,8 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/alarm_item_monday"
             android:layout_below="@+id/alarm_item_time"
-            android:layout_marginLeft="4dp"
-            android:text="С"
+            android:layout_marginLeft="@dimen/listItem"
+            android:text="@string/sr"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
@@ -64,8 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/alarm_item_tuesday"
             android:layout_below="@+id/alarm_item_time"
-            android:layout_marginLeft="4dp"
-            android:text="Ч"
+            android:layout_marginLeft="@dimen/listItem"
+            android:text="@string/cht"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
@@ -74,8 +62,8 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/alarm_item_wednesday"
             android:layout_below="@+id/alarm_item_time"
-            android:layout_marginLeft="4dp"
-            android:text="П"
+            android:layout_marginLeft="@dimen/listItem"
+            android:text="@string/pat"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
@@ -84,8 +72,8 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/alarm_item_thursday"
             android:layout_below="@+id/alarm_item_time"
-            android:layout_marginLeft="4dp"
-            android:text="С"
+            android:layout_marginLeft="@dimen/listItem"
+            android:text="@string/sub"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
@@ -94,12 +82,14 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/alarm_item_friday"
             android:layout_below="@+id/alarm_item_time"
-            android:layout_marginLeft="4dp"
-            android:text="В"
+            android:layout_marginLeft="@dimen/listItem"
+            android:text="@string/vsk"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <ToggleButton
             android:id="@+id/alarm_item_toggle"
+            android:textOn="@string/on"
+            android:textOff="@string/off"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
